# shinynx

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  sticky.conf  tox.ini
app/: asgi.py  browser.py  core.py  esgi.py  express.py  script.js  shared.py  sticky.py  utils.py  web.py
shinyma/: browser.py  core.py  express.py  utils.py  web.py
shinynx/: core.py  express.py  run.py  sticky.py  utils.py
templates/: nginx.conf  sticky.conf  systemd.service
testapp/: browser.py  express.py  script.js  shared.py
