[tool.poetry]
name = "shinyma"
version = "0.1.1"
description = "configure nginx to handle stickyness for shiny apps"
authors = ["Ian Castleden <arabidopsis@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shiny = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
