[project]
name = "shinynx"
version = "0.1.1"
description = "Backend an nginx server with multiple copies of a shiny app for load balancing"
authors = [{ name = "Ian Castleden", email = "arabidopsis@github.com" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
]
dependencies = ["shiny>=1.4.0,<2"]

[project.urls]
Repository = "https://github.com/arabidopsis/shinynx.git"

[tool.hatch.build.targets.sdist]
include = ["shinynx"]

[tool.hatch.build.targets.wheel]
include = ["shinynx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
